...
                                                            </constraints>
                                                        </imageView>
                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Settings" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CbP-qN-c3q">
                                                            <rect key="frame" x="38" y="0.0" width="63.333333333333343" height="30"/>
                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                        <viewLayoutGuide key="safeArea" id="1Bp-B6-NSN"/>
                    </view>
                    <navigationItem key="navigationItem" title="Home" id="cii-Eg-aYs">
                        <barButtonItem key="leftBarButtonItem" title="Menu" image="menu" id="dk2-yf-p9c">
                            <connections>
...
                                                            <button opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="1000" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Cad-N3-BYe" customClass="FilledButton" customModule="TreeSapIOS" cus
                                                                <rect key="frame" x="342" y="0.0" width="32" height="50"/>
                                                                <state key="normal" title="Next"/>
                                                                <connections>
                                                                    <action selector="broadcastNext:" destination="yrU-zm-ABx" eventType="touchUpInside" id="s8E-b7-2T9"/>
...
                                                <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="18z-aM-CCx">
                                                    <rect key="frame" x="343" y="6.6666666666666679" width="51" height="31.000000000000004"/>
                                                    <accessibility key="accessibilityConfiguration" label="Show Location Switch"/>
                                                    <connections>
                                                        <action selector="toggleLocationOnMap:" destination="fLH-Mh-jqL" eventType="valueChanged" id="rae-nv-gxg"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Max identification distance" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rDS-Fm-OlN">
                                                    <rect key="frame" x="20" y="11.666666666666664" width="205" height="21"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Account settings" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G0b-cT-D8F">
                                                    <rect key="frame" x="20" y="11.666666666666664" width="129" height="21"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Active data sources" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bhJ-zN-YY8">
                                                    <rect key="frame" x="20" y="11.666666666666664" width="150.66666666666666" height="21"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                        <viewLayoutGuide key="safeArea" id="ylU-IT-ZSh"/>
                    </view>
                    <navigationItem key="navigationItem" title="More Information" id="Qrx-E5-vc1">
                        <barButtonItem key="leftBarButtonItem" title="Close" image="xButton" id="YiN-PJ-89R">
                            <connections>
...
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Log in / Sign up" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="T9f-Sc-kvd">
                                                    <rect key="frame" x="20" y="11.666666666666664" width="118" height="21"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="log in or sign up"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                    <nil key="textColor"/>
...
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Log out" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oIU-ak-mV2">
                                                    <rect key="frame" x="20" y="11.666666666666664" width="58" height="21"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="log out"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                    <color key="textColor" name="systemRedColor" catalog="System" colorSpace="catalog"/>
...
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="Ay8-wJ-XRj">
                                                        <rect key="frame" x="147.33333333333337" y="0.0" width="226.66666666666663" height="34"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="create account email entry"/>
