...
        // Set the metric switch to off
        metricSwitch.isOn = false
    }

    // MARK: - Actions

    /// Shows an "Are you sure?" alert. When the user taps OK, calls broadcastSubmitTree.
    @IBAction func handleDoneButtonPressed(_: UIButton) {
        view.endEditing(true)
        let alert = UIAlertController(title: StringConstants.confirmSubmitTreeTitle, message: StringConstants.confirmSubmitTreeMessage, preferredStyle: .alert)
        alert.addAction(UIAlertAction(title: StringConstants.cancel, style: .cancel, handler: nil))
        alert.addAction(UIAlertAction(title: StringConstants.confirmSubmitTreeSubmitAction, style: .default, handler: { _ in self.broadcastSubmitTree() }))
        present(alert, animated: true)
...
