...

import Foundation

class StringConstants {
    // MARK: - Alerts

    static let ok = "OK"
    static let cancel = "Cancel"
    static let pleaseWait = "Please wait..."

    static let generalErrorTitle = "Error"
    static let generalErrorMessage = "Something went wrong. Please try again."

...
    static let dataSourceDisabledMessage0 = "The data source that contains the data for this tree is currently turned off. You can turn on \""
    static let dataSourceDisabledMessage1 = "\" in Settings."

    static let noTreesFoundByQRCodeTitle = "No trees found"
    static let noTreesFoundByQRCodeMessage = "No tree with the scanned QR code was found."

    static let invalidDistanceTitle = "Invalid distance"
    static let invalidDistanceMessage0 = "The max identification distance has been reset to "
    static let invalidDistanceMessage1 = "."

    static let failedToLoadNotificationsTitle = "Failed to load notifications"
    static let failedToLoadNotificationsMessage = "An error occurred while trying to load notifications. Please try again."

...
